<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/constraint_layout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorPrimaryDark"
                                             tools:context="colinparrott.com.songle.menu.MainActivity">


    <Button
        android:id="@+id/btn_Play"
        android:layout_width="250dp"
        android:layout_height="95dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
...
        android:text="@string/btntxt_Play"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diffSeek" />

    <Button
        android:id="@+id/btn_ClearSave"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
...
        android:elevation="12dp"
        android:text="@string/btntxt_ClearSave"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/txt_DifficultyDesc"
        app:layout_constraintTop_toTopOf="@+id/btn_ViewInfo" />

    <Button
        android:id="@+id/btn_ViewInfo"
        android:layout_width="138dp"
        android:layout_height="43dp"
...
        android:text="@string/btntxt_ViewInfo"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/txt_DifficultyDesc"
        app:layout_constraintTop_toBottomOf="@+id/txt_Difficulty" />

    <Button
        android:id="@+id/btn_Completed"
        android:layout_width="250dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.025"
        tools:foregroundTint="@color/colorAccent"
        tools:visibility="invisible"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/txt_ChooseDifficulty"
...
