...
    <string name="desc_boring">Boring</string>
    <string name="desc_notboring">Not boring</string>
    <string name="desc_interesting">Interesting</string>
    <string name="desc_veryinteresting">Very interesting</string>

    <string name="txt_RemainingPlaceholder">999 words left</string>
    <string name="txt_guess">Guess</string>
    <string name="txt_GuessPrompt">Guess Song</string>
    <string name="txt_GuessHint">Song name</string>
    <string name="txt_GuessSubmitBtn">Submit</string>

    <string name="txt_ChooseDifficulty">Select Difficulty</string>
    <string name="txt_ResumeDifficulty">Saved Game Difficulty</string>
    <string name="btntxt_ClearSave">Clear Save</string>
    <string name="btntxt_ViewInfo">Save Info</string>
    <string name="txt_VeryEasy">VERY EASY</string>
    <string name="txt_Easy">EASY</string>
    <string name="txt_Moderate">MODERATE</string>
...
    <string name="txt_EasyDesc">All words. Words are classified into 3 categories.</string>
    <string name="txt_ModerateDesc">75% of words. Words are classified into 3 categories.</string>
    <string name="txt_HardDesc">50% of words. Words are classified into 2 categories.</string>
    <string name="txt_VeryHardDesc">25% of words. No usefulness of words shown.</string>


    <string name="txt_Correct">Correct!</string>
    <string name="txt_Incorrect">Incorrect!</string>

    <string name="txt_TitleLabel">Title:</string>
    <string name="txt_ArtistLabel">Artist:</string>
    <string name="txt_URLLabel">Link:</string>

...
    <string name="txt_TitlePlaceholder" translatable="false">Bohemian Rhapsody</string>
    <string name="txt_ArtistPlaceholder" translatable="false">Queen</string>
    <string name="txt_URLPlaceholder" translatable="false"><a href="https://youtu.be/fJ9rUzIMcZQ">https://youtu.be/fJ9rUzIMcZQ</a></string>

    <string name="txt_QuitTitle">Are you sure you want to quit?</string>
    <string name="txt_Save">Save and quit</string>
    <string name="txt_Quit">Reset and quit</string>
    <string name="txt_Resume">Resume</string>

    <string name="txt_ResetTitle">Are you sure?</string>
    <string name="txt_ResetWarning">All current progress will be lost!</string>
    <string name="txt_YesReset">Yes</string>
    <string name="txt_NoReset">No</string>


    <string name="txt_SongList">SONG LIST</string>
    <string name="txt_SortByCompleted">Sort by completed</string>
    <string name="txt_CompletedPlaceholder">10/18 Completed</string>
...
