<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:elevation="24dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txt_Correct"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/textViewTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_TitleLabel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_TitlePlaceholder"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/textViewTitleLabel"
        android:layout_marginLeft="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTitleLabel"
        android:layout_marginBottom="-5dp"/>

    <TextView
        android:id="@+id/textViewArtistLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ArtistLabel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleLabel"/>

    <TextView
        android:id="@+id/textViewArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ArtistPlaceholder"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewTitle"
        app:layout_constraintBottom_toBottomOf="@+id/textViewArtistLabel"
        android:layout_marginBottom="-4dp"/>

    <TextView
        android:id="@+id/textViewURLLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_URLLabel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/textViewArtistLabel"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_URLPlaceholder"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewArtist"
        app:layout_constraintBottom_toBottomOf="@+id/textViewURLLabel"
        android:layout_marginBottom="0dp"/>


</android.support.constraint.ConstraintLayout>