...
        android:layout_marginLeft="9dp"
        android:text="@string/txt_GuessPrompt"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_guess"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@drawable/cursor_colour"
        android:hint="@string/txt_GuessHint"
        android:inputType="textAutoCorrect"
...
